--- a/app/assets/stylesheets/mixins/_media.scss
+++ b/app/assets/stylesheets/mixins/_media.scss
@@ -1,5 +1,7 @@
 @mixin media($query) {
-    @if $query == tabletAndUp {
-      @media (min-width: 50rem) { @content; }
-    }
-  }
+	@if $query == tabletAndUp {
+		@media (min-width: 50rem) {
+			@content;
+		}
+	}
+}
