--- a/app/views/quotes/index.html.erb
+++ b/app/views/quotes/index.html.erb
@@ -6,7 +6,7 @@
     <%= link_to "New quote",
                 new_quote_path,
                 class: "btn btn--primary",
-                data: { turbo_frame: "remote_modal" } %>
+                data: { turbo_frame: dom_id(Quote.new) } %>
   </div>
 
   <%= turbo_frame_tag Quote.new %>
